--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="space-x-10">
+<nav class="space-x-10" id="header">
   <ul
     class="flex flex-row space-x-4 md:space-x-5 md:text-xl justify-center md:justify-end font-thin"
   >
@@ -20,7 +20,7 @@
     </li>
     <li>
       <a
-        href="./Resume - Aditya Singh.pdf"
+        href="../../assets/Resume - Aditya Singh.pdf"
         target="_blank"
         rel="noreferrer"
         class="py-2 px-6 hover:bg-red-400 focus:bg-gray rounded-lg"
