--- a/src/app/skill/skill.component.html
+++ b/src/app/skill/skill.component.html
@@ -1,4 +1,4 @@
-<section class="my-28 px-5">
+<section class="my-28 px-5" id="skill">
   <header class="text-4xl font-bold pt-10 pb-3">
     <h2>Skills & Tools</h2>
   </header>
