--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -6,11 +6,11 @@
     </ng-lottie>
   </div>
   <div class="max-w-md mb-auto space-y-2">
-    <h1 class="text-5xl font-bold md:text-6xl">Hello, <br />I’m Aditya</h1>
+    <h1 class="text-5xl font-bold md:text-6xl">
+      Hello, <br />I’m {{ bigName }}
+    </h1>
     <p class="tracking-wide leading-relaxed pt-3">
-      I have a passion for developing apps and websites and coding real world
-      problems. I never stop learning and take every project as another
-      adventure.
+      {{ about }}
     </p>
   </div>
 </section>
